# nanachibot

./: .gitignore  LICENSE  README.md
nanachi/: Cargo.toml
nanachi/src/: lib.rs
nanachi/src/application/service/: mod.rs  nanachi.rs
nanachi/src/domain/: mod.rs
nanachi/src/domain/nanachi/: entity.rs  repository.rs
nanachi/src/infrastructure/: mod.rs
nanachi/src/infrastructure/repository_impl/: mod.rs
nanachibot/: .gitignore  Cargo.toml  README.md
nanachibot/src/: bot.rs  main.rs
